fixed scroll issues on mobile screens and added Avenir LT Pro fonts

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css?family=Work Sans");
+@import url("https://fonts.googleapis.com/css?family=Poppins");
+
+@font-face {
+  font-family: "Avenir Next LT Pro";
+  src: url("/assets/fonts/AvenirNextLTPro-Regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -13,8 +23,25 @@ body {
   overflow-x: hidden;
 }
 
+@media only screen and (max-width: 420px) {
+  html,
+  body {
+    width: 100%;
+    color: #ffffff;
+    margin: auto;
+    padding: 0px;
+    overflow-x: hidden;
+  }
+  .container {
+    background-image: url("../assets/images/Rectangle4301.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+  }
+}
+
 .container {
-  background-image: url("/Rectangle4301.png");
+  background-image: url("../assets/images/Rectangle4301.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
